Arreglo con estructura de mapas debido a discrepancia de versiones.