@@ -1,5 +1,7 @@
 package core.escutrack.model;
 
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 
 import java.time.LocalDateTime;
@@ -40,7 +42,19 @@ public class Paciente {
 	 * 
 	 * 
 	 --- */
-	private static final Map<String, Integer> ESTADO_CLINICO = Map.of("indefinido",0, "estable",1, "moderado",2, "urgente",3, "severo",4, "critico",5);
+	
+	private static final Map<String, Integer> ESTADO_CLINICO;
+	
+	static {
+		Map<String, Integer> map = new HashMap<>();
+		map.put("indefinido",0);
+		map.put("estable",1);
+		map.put("moderado",2);
+		map.put("urgente",3);
+		map.put("severo",4);
+		map.put("critico",5);
+		ESTADO_CLINICO = Collections.unmodifiableMap(map);
+	}
 	
 	private static int parseGradoGravedad(String gradoGravedad) {
 		if(gradoGravedad == null) return 0;
